feat: documentação.
